[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes_Scripts/FightingHUD.gd" type="Script" id=1]
[ext_resource path="res://KarmaFuture.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 2 )

[node name="FightingHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CurrentRoomLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -194.0
margin_top = 1.0
margin_right = -43.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Current Room:"
__meta__ = {
"_edit_lock_": true
}

[node name="RoomNumberLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -43.0
margin_top = 1.0
margin_right = -5.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealthLabel" type="Label" parent="."]
margin_right = 39.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "HP: "
__meta__ = {
"_edit_lock_": true
}

[node name="HealthNumberLabel" type="Label" parent="."]
margin_left = 37.0
margin_top = 1.0
margin_right = 125.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DamageTakenLabel" type="Label" parent="."]
margin_left = 113.0
margin_top = 40.0
margin_right = 157.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.027451, 0.027451, 1 )

[node name="Inventory" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -202.0
margin_top = -50.0
custom_fonts/font = SubResource( 2 )
text = "Inventory"
__meta__ = {
"_edit_lock_": true
}
[connection signal="pressed" from="Inventory" to="." method="_on_Inventory_pressed"]
